...
            verticalArrangement = Arrangement.spacedBy(16.dp),
        ) {
            Text(stringResource(R.string.main_description))
            OutlinedTextField(
                value = input,
                onValueChange = {
                    input = it
                    error = null
                },
                label = { Text(stringResource(R.string.input_label)) },
                supportingText = { Text(stringResource(R.string.input_hint)) },
                singleLine = true,
                isError = error != null,
...
